Store user role when create a user